--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:15
+    image: postgres:latest
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
@@ -18,7 +18,9 @@ services:
       retries: 5
 
   redis:
-    image: redis:7-alpine
+    image: redis:latest
+    volumes:
+      - redis_data:/data
     ports:
       - "6379:6379"
     healthcheck:
@@ -29,4 +31,5 @@ services:
 
 volumes:
   postgres_data:
+  redis_data:
 
